파일 정리: TV Show의 고아 파일 처리

--- a/templates/plex_mate_clear_movie.html
+++ b/templates/plex_mate_clear_movie.html
@@ -31,7 +31,7 @@
       <button id="movie_start1_btn" class="btn btn-sm btn-outline-info">1단계 시작</button>
       <button id="movie_start2_btn" class="btn btn-sm btn-outline-info">2단계 시작</button>
       <button id="movie_start3_btn" class="btn btn-sm btn-outline-info">3단계 시작</button>
-      <button id="movie_start4_btn" class="btn btn-sm btn-outline-info">4단계 시작</button>
+      <!-- <button id="movie_start4_btn" class="btn btn-sm btn-outline-info">4단계 시작</button> -->
     </div>
   </div>
 </div>
