파일정리: 기본 에이전트 정리 시 과도한 update 쿼리 실행 수정 파일정리: 기본 에이전트 정리 시 파생 시즌의 정보를 원본 시즌에서 취합

--- a/templates/plex_mate_clear_movie.html
+++ b/templates/plex_mate_clear_movie.html
@@ -104,6 +104,10 @@ function make_one(data) {
   }
   row += make_log("thumb", data.db.user_thumb_url);
   row += make_log("art", data.db.user_art_url);
+  if (data.db.user_clear_logo_url)
+    row += make_log("clear_logo", data.db.user_clear_logo_url);
+  if (data.db.user_music_url)
+    row += make_log("theme", data.db.user_music_url);
   row += j_row_end();
   return row;
 }
