--- a/templates/plex_mate_clear_show.html
+++ b/templates/plex_mate_clear_show.html
@@ -120,7 +120,9 @@ function make_one(data) {
   }
   row += make_log("thumb", data.db.user_thumb_url);
   row += make_log("art", data.db.user_art_url);
-  if (data.db.user_music_url != '')
+  if (data.db.user_clear_logo_url)
+    row += make_log("clear_logo", data.db.user_clear_logo_url);
+  if (data.db.user_music_url)
     row += make_log("theme", data.db.user_music_url);
   row += make_log("", "");
   if (data.file_count != 0) {
